test/files/pos/t3429/Test.java
public @interface Test {
  public Class exc() default Exception.class;
}